[tool.poetry]
name = "tfgs-api-gatherer"
version = "0.1.0"
description = ""
authors = ["cobaltcore <cobaltcore@yandex.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pony = "^0.7.14"
psycopg2-binary = "^2.8.6"
aiohttp = "^3.7.3"
beautifulsoup4 = "^4.9.3"
arrow = "^0.17.0"
python-dotenv = "^0.15.0"
lxml = "^4.6.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
